updates to allow and use Java 21 LTS in future, support Java 11 to 21